--- a/style.css
+++ b/style.css
@@ -10,13 +10,15 @@ html,body{
 .owl-carousel div h2, .owl-carousel div .textoverlay{
     position:absolute;
     color:#FFF;
-   font-size:12px;
+   font-size:2em;
    display:block;
-   top:50%;
-   left: 10%;
+   top:30%;
+   left: 8%;
    font-family: 'Fira Sans', sans-serif;
    font-weight: 500;
+   width: 60%;
 }
+
 
 
 .navbar{
@@ -53,6 +55,7 @@ html,body{
 	color:gray;
 	font-size: 0.5em;
 	display: inline-block;
+	font-style: italic;
 }
 
 .navbar .navbar__social{
