--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html,body{
    top:30%;
    left: 8%;
    font-family: 'Fira Sans', sans-serif;
-   font-weight: 500;
+   font-weight: 400;
    width: 60%;
 }
 
@@ -25,7 +25,8 @@ html,body{
 	position: fixed;
 	top:0;
 	z-index: 999;
-	width: 78%;
+	width: 1000px;
+	float: left;
 }
 
 .navbar__right{
@@ -287,4 +288,47 @@ html,body{
 	color:#ECEBEB;
 	font-weight: 300;
 	line-height: 1.5;
+}
+
+/****************BUTTONS***************/
+
+.primary-btn{
+	border:2px solid #F75035;
+	font-size: 15px;
+	font-weight: 500;
+	border-radius: 10px;
+	padding:10px 20px;
+	color:#F75035;
+	cursor:pointer;
+}
+
+.primary-btn:hover{
+	background-color: #F75035;
+	color:white;
+}
+
+.primary-btn.position{
+	position: absolute;
+	top:180px;
+	left:8%;
+}
+
+.secondary-btn{
+	background-color: #32312D;
+	font-size: 15px;
+	font-weight: 400;
+	color:white;
+	border-radius: 10px;
+	padding:10px 20px;
+	cursor: pointer;
+}
+
+.secondary-btn:hover{
+	color:#F75035;
+}
+
+.secondary-btn.position{
+	position: absolute;
+	top:180px;
+	left:35%;
 }
