--- a/css/icomoon/style.css
+++ b/css/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?99e03');
-  src:  url('fonts/icomoon.eot?99e03#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?99e03') format('truetype'),
-    url('fonts/icomoon.woff?99e03') format('woff'),
-    url('fonts/icomoon.svg?99e03#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?67ooiu');
+  src:  url('fonts/icomoon.eot?67ooiu#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?67ooiu') format('truetype'),
+    url('fonts/icomoon.woff?67ooiu') format('woff'),
+    url('fonts/icomoon.svg?67ooiu#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-arrow-point-to-right:before {
+  content: "\e908";
+}
 .icon-search:before {
   content: "\e900";
 }
@@ -47,9 +50,6 @@
 }
 .icon-phone-receiver-(2):before {
   content: "\e907";
-}
-.icon-right-arrow:before {
-  content: "\e908";
 }
 .icon-shield:before {
   content: "\e909";
