--- a/style.css
+++ b/style.css
@@ -36,17 +36,18 @@ html,body{
 
 
 .navbar{
-	position: fixed;
+	position: absolute;
 	top:0;
 	z-index: 999;
-	width: 1000px;
-	float: left;
+	width: 100%;
 }
 
 .navbar__right{
 	margin-left: 0;
 	background-color: #2A2F35;
 	height: 68px;
+	width: 75%;
+	display: inline-block;
 }
 
 .navbar__brand{
@@ -57,6 +58,10 @@ html,body{
 	font-size: 2em;
 	color:white;
 	text-align: center;
+	width: 25%;
+	display: inline-block;
+	position: relative;
+    top: -24px;
 }
 
 .navbar__brand a{
@@ -131,7 +136,7 @@ html,body{
 .desktop-icon-search{
 	position: absolute;
 	top: 40px;
-    right: 74px;
+    right: 25px;
 }
 
 #owl-demo .item img{
@@ -298,13 +303,14 @@ html,body{
 	font-weight: 700;
 	font-size: 1.2em;
 	margin-top: 5px;
-	margin-bottom: 10px;
+	margin-bottom: 8px;
 }
 
 .about-section .about-section__description{
-	text-transform: capitalize;
 	font-size: 0.8em;
 	font-weight: 300;
+	min-height: 61px;
+
 }
 
 /*************************/
@@ -439,24 +445,37 @@ html,body{
 
 .section .section__news-title{
 	display: inline-block;
-	width: 50%;
+	width: 70%;
 	float: left;
+	font-size: 18px;
+	font-weight: 500;
+	cursor: pointer;
+}
+
+.section__news-title a{
+	color:black;
 }
 
 .section .section__news-date{
 	display: inline-block;
 	float:right;
+	font-size: 10px;
+	color:gray;
+	margin-top: 10px;
 }
 
 .section .section__news-description{
 	display: block;
 	margin-top: 10px;
-	color:#D1D1D1;
+	color:gray;
 	font-size: 14px;
 	font-weight: 300;
 	float: left;
     width: 100%;
 }
+.section__news-photo{
+}
+
 
 .section .section__news-photo1{
 	background-image: url('images/building.jpg');
@@ -553,9 +572,10 @@ html,body{
 	font-size: 15px;
 	font-weight: 500;
 	border-radius: 10px;
-	padding:10px 20px;
+	padding:8px 30px;
 	color:#F75035;
 	cursor:pointer;
+	text-decoration: none;
 }
 
 .primary-btn:hover{
@@ -575,8 +595,10 @@ html,body{
 	font-weight: 400;
 	color:white;
 	border-radius: 10px;
-	padding:10px 20px;
+	padding:8px 20px;
 	cursor: pointer;
+	border:2px solid #32312D;
+	text-decoration: none;
 }
 
 .secondary-btn:hover{
@@ -814,10 +836,13 @@ input[type="submit"].form-submit:hover{
 }
 
 .contacts-text{
-	font-size: 15px;
+	font-size: 20px;
 	font-weight: 300;
 }
 
+.google-maps iframe{
+	width: 100%;
+}
 
 @media only screen and (max-width: 768px) {
 	.desktop-menu{
@@ -827,17 +852,23 @@ input[type="submit"].form-submit:hover{
 		display: block;
 	}
 
+	#owl-demo .owl-wrapper .item img{
+		height: 80vh !important;
+	}
+
 	.owl-carousel div h2, .owl-carousel div .textoverlay{
-		font-size: 25px;
-		top:10%;
+		font-size: 33px;
+		top:15%;
 	}
 
 	.primary-btn.position{
-		top: 122px;
+		text-align:center;
+		width: 70%;
+		top: 152px;
 	}
 
 	.secondary-btn.position{
-		top: 194px;
+		top: 200px;
 		left:20px;
 	}
 
@@ -856,9 +887,17 @@ input[type="submit"].form-submit:hover{
 	.section .section__service2{
 		margin-bottom: 20px;
 	}
-
 	.section .section__service3{
 		margin-bottom: 20px;
+	}
+
+
+	.about-item{
+		margin-bottom: 40px;
+	}
+
+	.section__news-item{
+		margin-bottom: 40px;
 	}
 
 	.footer .footer__nav{
@@ -872,4 +911,21 @@ input[type="submit"].form-submit:hover{
 	.footer__nav{
 		margin-bottom: 30px;
 	}
+	.main-section{
+		margin-top: 30px;
+	}
+
+	.title{
+		width: 84%;
+	}
+
+	.section__projects{
+		margin-top:0;
+	}
+
+	.section__projects .project{
+		margin-bottom: 20px;
+	}
+
+	
 }
