--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html,body{
 	position: absolute;
 	top:0;
 	left:0;
-	background-color: rgba(37, 29, 18, 0.55);
+	background-color: rgba(115, 97, 97, 0.45);
 	z-index: 111;
 }
 
@@ -123,7 +123,7 @@ html,body{
 }
 
 .nav__item:hover{
-	color:#F07864;
+	color:#fa9585;
 }
 
 .nav .nav__search{
@@ -271,7 +271,7 @@ html,body{
 }
 
 .navbar-mobile .list-item a:hover{
-	color:#F07864;
+	color:#fa9585;
 }
 
 .closed{
@@ -339,7 +339,7 @@ html,body{
 .section .section__line{
 	width: 80px;
 	height: 5px;
-	background-color: #F07864;
+	background-color: #fa9585;
 	float: left;
 	display: block;
 	margin-bottom: 30px;
@@ -587,18 +587,18 @@ html,body{
 /****************BUTTONS***************/
 
 .primary-btn{
-	border:2px solid #F07864;
+	border:2px solid #fa9585;
 	font-size: 15px;
 	font-weight: 500;
 	border-radius: 10px;
 	padding:8px 30px;
-	color:#F07864;
+	color:#fa9585;
 	cursor:pointer;
 	text-decoration: none;
 }
 
 .primary-btn:hover{
-	background-color: #F07864;
+	background-color: #fa9585;
 	color:white;
 }
 
@@ -639,7 +639,7 @@ html,body{
 }
 
 .link__know-more:hover{
-	color:#F07864;
+	color:#fa9585;
 }
 
 /*************PROJECTS****************/
@@ -706,11 +706,15 @@ html,body{
 
 }
 
+.section__space-top{
+	margin-top: 30px;
+}
+
 .section__project .image{
 	width: 100%;
 	height: 300px;
-	background-size: 100%;
-	background-position: cover;
+	background-size: cover;
+	background-position: 100%;
 }
 
 /***********ORGANIZATION**************/
