--- a/style.css
+++ b/style.css
@@ -667,15 +667,16 @@ html,body{
     height: 100%;
     
     display: block;
-    background: rgba(111, 90, 82, 0.5);
+    background: rgba(99, 56, 39, 0.5);
 }
 
 .project .project__title{
 	position: absolute;
-    top: 50%;
+    top: 60%;
     left: 10%;
-    width: 100%;
-    height: 100%;
+    width: 89%;
+    height: 46px;
+    line-height: 1;
     color:white;
     font-size: 20px;
     font-weight: 400;
