--- a/style.css
+++ b/style.css
@@ -504,7 +504,7 @@ html,body{
 
 
 .section .section__news-photo1{
-	background-image: url('images/index/betão.JPG');
+	background-image: url('images/index/betao.JPG');
 	background-size: cover;
 	background-position: 100%;
 	height: 150px;
