--- a/style.css
+++ b/style.css
@@ -7,13 +7,17 @@ html,body{
 	border-color: #928d8d;
 }
 
+.no-margin{
+	margin: 0;
+}
+
 .background-top{
 	width: 100%;
 	height: 100%;
 	position: absolute;
 	top:0;
 	left:0;
-	background-color: rgba(115, 97, 97, 0.45);
+	background-color: rgba(72, 65, 65, 0.45);
 	z-index: 111;
 }
 
@@ -807,7 +811,7 @@ html,body{
 .services__container .service-text{
 	font-weight: 300;
 	font-size: 14px;
-	text-align: center;
+	text-align: left;
 	margin-top: 10px;
 }
 
