--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html,body{
 	position: absolute;
 	top:0;
 	left:0;
-	background-color: rgba(72, 65, 65, 0.45);
+	background-color: rgba(21, 18, 18, 0.5);
 	z-index: 111;
 }
 
@@ -424,7 +424,7 @@ html,body{
 }
 
 .section .section__service-background{
-	background-color: rgba(99, 58, 9, 0.6);
+	background-color: rgba(53, 32, 7, 0.6);
 	position: absolute;
 	top:0;
 	left:0;
@@ -678,7 +678,7 @@ html,body{
     height: 100%;
     
     display: block;
-    background: rgba(99, 56, 39, 0.5);
+    background: rgba(53, 29, 20, 0.5);
 }
 
 .project .project__title{
@@ -727,7 +727,11 @@ html,body{
 	height: 300px;
 	background-size: cover;
 	background-position: 100%;
+}
 
+.image-up{
+	transform: scaleY(-1);
+	filter: FlipH;
 }
 
 /***********ORGANIZATION**************/
