--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html,body{
 	position: absolute;
 	top:0;
 	left:0;
-	background-color: rgba(21, 18, 18, 0.5);
+	background-color: rgba(62, 47, 47, 0.4);
 	z-index: 111;
 }
 
@@ -33,7 +33,7 @@ html,body{
     color:#FFF;
    font-size:50px;
    display:block;
-   top:30%;
+   top:44%;
    left: 8%;
    font-family: 'Fira Sans', sans-serif;
    font-weight: 400;
@@ -598,24 +598,25 @@ html,body{
 /****************BUTTONS***************/
 
 .primary-btn{
-	border:2px solid #fa9585;
+	
+	background-color: #fa9585;
 	font-size: 15px;
 	font-weight: 500;
 	border-radius: 10px;
 	padding:8px 30px;
-	color:#fa9585;
+	color:white;
 	cursor:pointer;
 	text-decoration: none;
 }
 
 .primary-btn:hover{
-	background-color: #fa9585;
+	background-color: #f75035;
 	color:white;
 }
 
 .primary-btn.position{
 	position: absolute;
-	top:180px;
+	top:140px;
 	left:8%;
 }
 
@@ -637,7 +638,7 @@ html,body{
 
 .secondary-btn.position{
 	position: absolute;
-	top:180px;
+	top:140px;
 	left:35%;
 }
 
@@ -664,8 +665,8 @@ html,body{
 }
 
 .project{
-	background-size: 100%;
-	background-position: cover;
+	background-size: cover;
+	background-position: 100%;
 	height: 200px;
 	position: relative;
 }
@@ -899,6 +900,7 @@ input[type="submit"].form-submit:hover{
 	.owl-carousel div h2, .owl-carousel div .textoverlay{
 		font-size: 33px;
 		top:15%;
+		width: 87%;
 	}
 
 	.primary-btn.position{
