--- a/style.css
+++ b/style.css
@@ -901,6 +901,10 @@ input[type="submit"].form-submit:hover{
 		display: block;
 	}
 
+	.navbar-mobile .list-item{
+		margin-bottom: 2em;
+	}
+
 	#owl-demo .owl-wrapper .item img{
 		height: 80vh !important;
 	}
@@ -913,13 +917,18 @@ input[type="submit"].form-submit:hover{
 
 	.primary-btn.position{
 		text-align:center;
-		width: 70%;
-		top: 152px;
+		width: 25%;
+		top: 100px;
+	}
+
+	.secondary-btn{
+		text-align: center;
 	}
 
 	.secondary-btn.position{
-		top: 200px;
-		left:20px;
+		top: 150px;
+		left:50px;
+		width: 25%;
 	}
 
 	.owl-theme .owl-controls{
@@ -967,7 +976,16 @@ input[type="submit"].form-submit:hover{
 
 	.title{
 		width: 84%;
+		position: relative;
+		float: left;
+		margin-left: 10px;
+		display: inline-block;
+	}
 
+	.icon__circle{
+		position: relative;
+		display: inline-block;
+		float: left;
 	}
 
 	.section__projects{
@@ -976,6 +994,11 @@ input[type="submit"].form-submit:hover{
 
 	.section__projects .project{
 		margin-bottom: 20px;
+	}
+
+	.project .project__title{
+		top:45%;
+		line-height: 1.2;
 	}
 
 	.section__project .image{
