--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ html,body{
    left: 8%;
    font-family: 'Fira Sans', sans-serif;
    font-weight: 400;
-   width: 65%;
+   width: 80%;
    z-index: 1111;
 }
 
@@ -639,7 +639,7 @@ html,body{
 .secondary-btn.position{
 	position: absolute;
 	top:140px;
-	left:35%;
+	left:290px;
 }
 
 
@@ -893,7 +893,7 @@ input[type="submit"].form-submit:hover{
 	width: 100%;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 991px) {
 	.desktop-menu{
 		display: none;
 	}
@@ -917,8 +917,9 @@ input[type="submit"].form-submit:hover{
 
 	.primary-btn.position{
 		text-align:center;
-		width: 25%;
+		width: 50%;
 		top: 100px;
+		left:50px;
 	}
 
 	.secondary-btn{
@@ -926,9 +927,9 @@ input[type="submit"].form-submit:hover{
 	}
 
 	.secondary-btn.position{
-		top: 150px;
+		top: 160px;
 		left:50px;
-		width: 25%;
+		width: 50%;
 	}
 
 	.owl-theme .owl-controls{
@@ -936,7 +937,8 @@ input[type="submit"].form-submit:hover{
 	}
 
 	.testimonial{
-		top:0;
+		top:50%;
+		transform: translateY(-50%);
 		font-size: 15px;
 	}
 
