--- a/style.css
+++ b/style.css
@@ -345,6 +345,7 @@ html,body{
 .section .section__title{
 	font-weight: 700;
 	font-size: 2em;
+	margin-bottom: 10px;
 }
 
 .section .section__line{
@@ -893,6 +894,28 @@ input[type="submit"].form-submit:hover{
 	width: 100%;
 }
 
+.section__projects-container{
+	width: 32%;
+    display: inline-block;
+    float: left;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+.section__projects-container:nth-child(3){
+	margin-right: 0;
+}
+
+
+@media only screen and (min-device-width : 768px) and (max-device-width : 1000px)  { 
+	.section__projects-container{
+		width:48%;
+	}
+	.section__projects-container:nth-child(2){
+		margin-right: 0;
+	}
+}
+
+
 @media only screen and (max-width: 991px) {
 	.desktop-menu{
 		display: none;
@@ -994,10 +1017,11 @@ input[type="submit"].form-submit:hover{
 		margin-top:0;
 	}
 
-	.section__projects .project{
+	.section__projects-container{
+		width:100%;
 		margin-bottom: 20px;
 	}
-
+	
 	.project .project__title{
 		top:45%;
 		line-height: 1.2;
