--- a/style.css
+++ b/style.css
@@ -72,6 +72,65 @@ html,body{
 	display: inline-block;
 }
 
+.search{
+	width: 20%;
+	display: inline-block;
+}
+
+.nav__list{
+	list-style: none;
+	margin: 0;
+	width: 76%;
+	display: inline-block;
+}
+
+.nav__list li{
+	display: inline-block;
+	width: 24%;
+	padding-top: 7px;
+	 padding-bottom: 7px;
+	vertical-align: top;
+	text-align: center;
+	cursor: pointer;
+	text-decoration: none;
+}
+
+.nav__dropdown{
+	display: none;
+}
+
+.nav__dropdown-mobile{
+	display: none;
+}
+
+.nav__list li:hover{
+	background-color: #565454;
+}
+
+.nav__list li:hover .nav__dropdown{
+	display: block;
+	background-color: #565454;
+	padding: 10px;
+	padding-top: 20px;
+	width: 150px;
+	top:6px;
+	position: relative;
+}
+
+.nav__dropdown .nav__dropdown-item{
+	text-align: left;
+	display: block;
+	margin-bottom: 10px;
+	text-decoration: none;
+	color:white;
+	font-size: 13px;
+	line-height: 1.1;
+}
+
+.nav__dropdown .nav__dropdown-item:hover{
+	color:#fa9585;
+}
+
 .navbar__brand{
 	padding: 10px 0px;
 	background-color: #F07864;
@@ -93,7 +152,6 @@ html,body{
 
 .navbar .navbar__top{
 	margin-top: 5px;
-    padding-bottom: 7px;
 	padding-left: 20px;
 	padding-right: 20px;
 }
@@ -125,8 +183,7 @@ html,body{
 }
 
 .nav .nav__item{
-	display: inline-block;
-	width: 18%;
+	
 	color:white;
 	text-align: center;
 	cursor: pointer;
